packages/app/styles/globals.less
@import '~antd/dist/antd.less';
@import '~antd/lib/style/themes/dark.less';

@border-radius-base: 4px;
@primary-color: #8570e4;
@body-background: #00042D;
@component-background: fade(@white, 10%);
@border-color-base: fade(@white, 40%);
@border-color-split: fade(@white, 30%);
@btn-text-hover-bg: fade(@white, 10%); // defaults to 3%
@text-color-secondary: fade(@white, 60%); // defaults to 45%
@layout-header-background: transparent;
@layout-sider-background: fade(@white, 10%);
@scrollbar-color: fade(@white, 20%);

html {
  background: @body-background;
  background-image: url('/background.png');
  background-size: cover;
  background-repeat: no-repeat;
}

body, .ant-layout {
  background: transparent;
}

textarea {
  resize: none;
}

.ant-tag {
  border-radius: 99999px;
}

.ant-menu {
  background: transparent;
  border: none;
  // background: @body-background;
  // border-radius: @border-radius-base;
  // border: 1px solid fade(@white, 30%);
}

.ant-card .ant-card {
  // background: #191919;
}

.ant-table-tbody > tr.ant-table-row:hover td.ant-table-cell {
  background: @component-background;
}

.ant-layout-content {
  overflow: auto;
}

.ant-modal-title {
  text-align: center;
}

.ant-card.ant-card-small .ant-card-body {
  padding-top: 8px;
  padding-bottom: 4px;
}

.ant-btn.ant-btn-ghost {
  background: @btn-text-hover-bg;
}

.ant-btn.hover\:ant-btn-dangerous {
  &:hover, &:active, &:focus {
    background: unset;
    color: @error-color;
    border-color: @error-color;
  }
}

.ant-form-item {
  margin-bottom: 12px;
}

.ant-select-multiple.ant-select-disabled.ant-select:not(.ant-select-customize-input) .ant-select-selector {
  background: unset;
  border: none;
  padding: 0;
}

.ant-typography-edit {
  color: @text-color-secondary;
}

// match height with input
.ant-alert {
  padding: 4px 16px;
}

.ant-typography-h1 { .typography-title-1(); margin: 0; }
.ant-typography-h2 { .typography-title-2(); margin: 0; }
.ant-typography-h3 { .typography-title-3(); margin: 0; }
.ant-typography-h4 { .typography-title-4(); margin: 0; }
.ant-typography-h5 { .typography-title-5(); margin: 0; }

.ant-select .ant-select-disabled .ant-select-selector {
  background: unset;
  border: unset;
  padding: 0;
}

.ant-page-header-heading-left, .ant-page-header-heading-tags {
  flex: 1;
}

.ant-form-vertical .ant-form-item-label {
  padding-bottom: 2px;

  &, & > label {
    color: @text-color-secondary;
    text-transform: uppercase;
    font-size: 11px;
    font-weight: bold;
  }
}

.dewo-field {
  &.dewo-field-display:not(:focus) {
    padding-left: 0;
    border-color: transparent;
  }

  &:disabled {
    padding: 0;
    margin: 0;
    background: unset;
    border: unset;
    cursor: unset;
    color: unset;
  }
}

.pointer-cursor {
  cursor: pointer;
}

.dewo-task-board {
  overflow-x: auto;

  padding: 16px;
  padding-top: 0;

  height: 100%;

  // TODO(fant): rework these hacks
  & > .ant-space {
    display: flex;
    max-height: 100%;

    & > .ant-space-item {
      display: flex;
      flex-direction: column;
      min-height: 0;
      max-height: 100%;

      & > div {
        display: flex;
        flex-direction: column;
        min-height: 0;
        max-height: 100%;
        
        & > .ant-card {
          display: flex;
          flex-direction: column;
          min-height: 0;
          max-height: 100%;
        }
      }
    }
  }
}

::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-thumb {
  background-color: @scrollbar-color;
  border-radius: @border-radius-base;
  border: 1px solid transparent;
  background-clip: content-box;
}

.dewo-task-board-column .ant-card-body {
  overflow-y: auto;

  &::-webkit-scrollbar {
    width: 6px;
  }

  &::-webkit-scrollbar-thumb {
    background-color: @component-background;
  }

  &:hover::-webkit-scrollbar-thumb {
    background: @scrollbar-color;
  }
}
.ant-card.dewo-card-create-project {
  height: 100%;
  cursor: pointer;

  & .ant-card-body {
    height: 100%;
    display: grid;
    place-items: center;
  }
}

.hover\:component-highlight {
  transition: background 0.3s ease;
  &:hover {
    background: fade(@white, 20%);
  }
}

.max-w-sm { max-width: @screen-sm; }
.max-w-md { max-width: @screen-md; }
.max-w-lg { max-width: @screen-lg; }
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.bg-primary {
  background: @primary-color;
}

#__next, .ant-layout {
  height: 100%;
}

